[package]
name = "bellman_deadlock"
version = "0.1.0"
authors = ["Volker Mische <volker.mische@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.0"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
rayon = "1.5.0"
